--- a/4-7-15/src/classes/CreateDraftContractFromContract.cls
+++ b/4-7-15/src/classes/CreateDraftContractFromContract.cls
@@ -13,10 +13,30 @@ public with sharing class CreateDraftContractFromContract {
         PageReference pageRef = null;
         try{
             
-            
-            
+       		Decimal EuroConversionRate = 0;
+			Decimal PoundsConversionRate=0;     
+            CurrencyRates__c mc = CurrencyRates__c.getOrgDefaults();			
+					EuroConversionRate	= mc.EuroConversionRate__c;
+					PoundsConversionRate= mc.BritishPoundConversionRate__c;	
            
 			Contract cont = [Select Date_EagleEye_User_Count_Updated__c, Contract_Term_Length_Yrs__c, Year_1_Maintenance_Amount_EagleEye__c, Year_1_Maintenance_Amount_DocXtools__c,Year_1_Maintenance_Amount_3BClean__c,contractNumber, original_contract_name__c, original_contract_date__c, startdate, enddate, account.industry, account.Client_Relations_Account_Owner__c,Id,AccountId,OwnerExpirationNotice,BillingStreet,BillingCity,BillingState,BillingPostalCode,BillingCountry,ContractTerm,OwnerId,Status,CompanySignedId,CompanySignedDate,CustomerSignedId,CustomerSignedTitle,CustomerSignedDate,SpecialTerms,ActivatedById,ActivatedDate,StatusCode,Description,Name,LastApprovedDate,LastActivityDate,Contract_Type__c,Contract_Sub_Type__c,Budget_Letter_Sent__c,Budget_Letter_Sent_Date__c,Addendum_Sent__c,Addendum_Sent_Date__c,In_Negotiation__c,In_Negotiation_Date__c,Customer_Signed__c,Agreement_Termination_Notice_Sent__c,Agreement_Termination_Notice_Sent_Date__c,Software_Removal_Acknowledgement_Recd__c,Software_Removal_Acknowledgement_Date__c,Legacy_Contract_ID__c,Out_Clause__c,Annual_Renewal__c,Billing_Contact__c,Legacy_Client_ID__c,Maintenance_Letter__c,DocXchange_with_KP__c,Number_of_Documents__c,Year1_Billing_Date__c,Year2_Billing_Date__c,Year3_Billing_Date__c,Previous_Term_Contract__c,Originating_Opportunity__c,SF_Migration_Id__c,Enterprise_License__c,InSituSCV__Billing_Address_ISO__c,InSituSCV__Billing_Address_Status__c,InSituSCV__Shipping_Address_ISO__c,InSituSCV__Shipping_Address_Status__c,Annual_True_Up__c,US_3BClean_Users__c,UK_3BClean_Users__c,X3BClean_User_Counts_Date__c,Number_of_PS_Days_Provided_at_No_Charge__c,Pre_purchased_PS_Days_Total_Billing__c,Number_of_offices__c,Year_1_Billing_Amount_Services__c,Year_2_Billing_Amount_Services__c,Year_3_Billing_Amount_Services__c,Year_4_Billng_Amount_Services__c,Year_4_Services_of_Days_del__c,Year_1_Billing_Amount_Software__c,Year_2_Billing_Amount_Software__c,Year_3_Billing_Amount_Software__c,Year_4_Billing_Amount_Software__c,NDA__c,EagleEye_Users__c,Increase_Cap__c,Currency_Type__c,Red_Yellow_Green__c,Total_Number_of_Pre_Purchased_Svc_Days__c,Services_of_Pre_purchased_Days__c,Average_Billing_Amount_Services__c,Average_Billing_Amount_Software__c,Primary_Agreement_Recipient__c,Secondary_Agreement_Recipient__c,Year_1_Billing_Amount_EagleEye__c,Year_2_Billing_Amount_EagleEye__c,Year_4_Billing_Amount_EagleEye__c,Year_3_Billing_Amount_EagleEye__c,Year_1_Billing_Amount_3BClean__c,Year_2_Billing_Amount_3BClean__c,Year_3_Billing_Amount_3BClean__c,Year_4_Billing_Amount_3BClean__c,Average_Billing_Amount_EagleEye__c,Average_Billing_Amount_3BClean__c,Fiscal_Year_End__c,Pre_purchased_PS_Days_Discounted_Dai__c,PS_Days_Total_Actual_Value__c,Total_PS_Days_Used__c,Billing_Term_Net_Days__c,Previous_Contract_ID__c from Contract WHERE Id=:cont.Id];
+			
+			
+				
+			
+			for (contract_product__c cp : [select product__c, contract__r.account.industry, contract__r.account.BillingCountry from contract_product__c where contract__r.id =:cont.Id and product__c != 'Services' ])
+				{
+						if (products == '')
+						{
+							products = cp.product__c;
+						}
+						else if (products != '')
+						{
+							products = products + ',' + cp.product__c;
+						
+						}
+			
+				}
 			
 			integer term = cont.Contract_Term_Length_Yrs__c.intValue();
 			//Process contract products
@@ -41,6 +61,15 @@ public with sharing class CreateDraftContractFromContract {
             newContract.status = 'Draft';
             system.debug('checking some cont fields');
             system.debug(cont.Contract_Sub_Type__c);
+            
+            //Check LexisDraft checkbox if one of the CPs is LexisDraft
+            if (products.containsIgnoreCase('Lexis')) {
+			newContract.Lexis_Draft_EagleEye__c = True;
+			}
+            
+            
+            
+            
             //Perpetual specific logic
             if (cont.Contract_Sub_Type__c == 'Perpetual'){  
            				 newContract.EndDate = cont.EndDate + 366;
@@ -308,15 +337,18 @@ public with sharing class CreateDraftContractFromContract {
 					  {
 					newContract.year_4_start_date__c = endDateForCalculations.AddYears(3);
 					newContract.year_4_end_date__c =  endDateForCalculations.AddYears(4).AddDays(-1);           	
-					  }                             
+					  } 
+					  
+				                            
                             
-system.debug('status=');
-system.debug(newContract.status);
+
 
                         insert newContract;    
 
-
-
+ //Fill out previous (original) contract "new contract year 1" field
+				 cont.Next_Contract_Yr_1_Software_Amount__c = (decimalZeroIfNull(newContract.Year_1_Billing_Amount_Software__c) + decimalZeroIfNull(newContract.Year_1_Billing_Amount_EagleEye__c) + decimalZeroIfNull(newContract.Year_1_Billing_Amount_3BClean__c) + decimalZeroIfNull(newContract.Year_1_Billing_Amount_Patent_Companion__c));
+				 
+						update cont;
 
 
 
@@ -385,7 +417,17 @@ integer roundMe(decimal i, integer v){
     integer i2 = i.intValue();
     return (((i2+ 499)/v) * v);
 }
- 
+ public Decimal decimalZeroIfNull(Decimal num )
+				{
+			if (num == null) num = 0;
+			return num;
+				}
+				
+			public Integer integerZeroIfNull(Integer num )
+				{
+			if (num == null) num = 0;
+			return num;
+				}
 
 
 }
