Before SF refresh

--- a/4-7-15/src/classes/MS_CloudServiceActions_v2.cls
+++ b/4-7-15/src/classes/MS_CloudServiceActions_v2.cls
@@ -1262,7 +1262,7 @@ String transactionID = '';
 		    							updateContract.year_4_billing_amount_patent_Companion__c = billingAmountInt + origYear4Billing;
 		    						}
 		
-									//end PC if
+									//end PC if tt
 				    				}				 	
 		    		
 		    		
